Fix alignment

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -803,3 +803,7 @@ button{
         align-items: flex-start;
     }
 }
+
+.fBox{
+    margin-top: auto;
+}
